--- a/package.json
+++ b/package.json
@@ -11,10 +11,12 @@
   },
   "dependencies": {
     "@smastrom/react-rating": "^1.5.0",
+    "aos": "^2.3.4",
     "localforage": "^1.10.0",
     "match-sorter": "^6.4.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
+    "react-fast-marquee": "^1.6.5",
     "react-icons": "^5.3.0",
     "react-router-dom": "^6.27.0",
     "sort-by": "^1.2.0"
