--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-spring/web": "^9.7.5",
     "@smastrom/react-rating": "^1.5.0",
     "aos": "^2.3.4",
     "localforage": "^1.10.0",
